--- a/CreateCosmosDBWithEventualConsistency.csproj
+++ b/CreateCosmosDBWithEventualConsistency.csproj
@@ -8,6 +8,9 @@
 
   <ItemGroup>
 	<PackageReference Include="Azure.Identity" Version="1.9.0" />
+	<PackageReference Include="Azure.ResourceManager.CosmosDB" Version="1.3.0" />
 	<PackageReference Include="Azure.ResourceManager.Resources" Version="1.6.0" />
+	<PackageReference Include="Microsoft.Azure.DocumentDB.Core" Version="1.3.1" />
+	<PackageReference Include="Microsoft.Azure.DocumentDB" Version="1.14.1" />
   </ItemGroup>
 </Project>
